--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </activity>
         <activity android:name=".app.MainActivity"/>
         <activity android:name=".home.activity.SearchActivity"/>
+        <activity android:name=".home.activity.VideoInfoActivity"/>
     </application>
 
 </manifest>
