--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.shoppingmall"
-        minSdk 16
+        minSdk 20
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -36,7 +36,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.0.0'
     implementation files('libs\\fastjson-1.2.4.jar')
     implementation files('libs\\jackson-annotations-2.13.0.jar')
-    implementation files('libs\\alipaySdk-20160516.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -45,6 +44,7 @@ dependencies {
     implementation 'com.facebook.stetho:stetho-okhttp3:1.6.0'
     implementation 'com.google.code.gson:gson:2.9.0'
     implementation 'io.github.youth5201314:banner:2.2.2'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.13.1'
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0'
+    api 'com.alipay.sdk:alipaysdk-android:15.8.10@aar'
 }
