--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
         <activity android:name=".shoppingcart.activity.VideoCartActivity"/>
         <activity android:name=".app.LoginActivity"/>
         <activity android:name=".shoppingcart.fragment.activity.MessageCenterActivity"/>
+        <activity android:name=".home.activity.ChannelActivity"/>
         <activity
             android:name="com.alipay.sdk.app.H5PayActivity"
             android:configChanges="orientation|keyboardHidden|navigation"
